Fix whitespace overlap issue with the "Do It!" box

--- a/2015-09-04-imagej2-scripting/style.css
+++ b/2015-09-04-imagej2-scripting/style.css
@@ -18,6 +18,10 @@
   padding: 0.7em !important;
 }
 
+.doit ul {
+  margin-left: 80px !important;
+}
+
 .plain {
   background: none !important;
   border: none !important;
